--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,11 +1,16 @@
 {
-  "name": "bs-css",
+  "name": "@ryb73/bs-css-native",
   "reason": {
     "react-jsx": 3
   },
   "refmt": 3,
+  "bs-dependencies": [
+    "reason-react-native",
+  ],
   "bs-dev-dependencies": [
-    "reason-react", "@glennsl/bs-jest"
+    "@glennsl/bs-jest",
+    "bs-react-test-renderer",
+    "reason-react",
   ],
   "bsc-flags": [
     "-bs-super-errors",
@@ -17,10 +22,6 @@
   "sources": [
     {
       "dir": "src"
-    },
-    {
-      "dir": "example",
-      "type": "dev"
     },
     {
       "dir": "__tests__",
