--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "bsb -make-world -w",
     "test": "jest",
     "testw": "jest --watchAll",
+    "clean": "rm -rf lib/ && bsb -clean-world",
     "postinstall": "[ ! -f package-links.json ] || ppl link-file"
   },
   "keywords": [
@@ -31,14 +32,15 @@
     "bs-platform": "^5.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.6.0",
     "@glennsl/bs-jest": "^0.4.8",
     "bs-platform": "^5.0.0",
     "bs-react-test-renderer": "^2.0.0",
     "jest": "^24.7.1",
     "parcel-bundler": "^1.12.3",
-    "react": "16.8.3",
-    "react-native": "^0.59.0",
-    "react-test-renderer": "16.8.3",
+    "react": "16.8.6",
+    "react-native": "^0.60.5",
+    "react-test-renderer": "16.8.6",
     "reason-react": "^0.7.0",
     "reason-react-native": "^0.60.0"
   },
