--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@ryb73/bs-css-native",
+  "private": false,
   "version": "0.0.1",
   "description": "BuckleScript bindings for emotion",
   "scripts": {
