--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "reason-react-native": "^0.60.0"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "snapshotResolver": "<rootDir>/snapshotResolver.js"
   }
 }
