--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "description": "BuckleScript bindings for emotion",
   "scripts": {
     "build": "bsb -make-world",
+    "watch": "bsb -make-world -w",
     "predev": "npm run build",
     "dev": "parcel example/index.html",
     "start": "bsb -make-world -w",
@@ -15,6 +16,10 @@
     "clean": "rm -rf lib/ && bsb -clean-world",
     "postinstall": "[ ! -f package-links.json ] || ppl link-file"
   },
+  "files": [
+    "/bsconfig.json",
+    "/src"
+  ],
   "keywords": [
     "emotion",
     "bucklescript",
@@ -32,12 +37,12 @@
     "@emotion/native": "^10.0.14"
   },
   "peerDependencies": {
-    "bs-platform": "^5.0.0"
+    "bs-platform": "^5.0.0 || ^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
     "@glennsl/bs-jest": "^0.4.8",
-    "bs-platform": "^5.0.0",
+    "bs-platform": "^6.0.0",
     "bs-react-test-renderer": "^2.0.0",
     "jest": "^24.7.1",
     "parcel-bundler": "^1.12.3",
